2010-05-31  Lyon Chen  <liachen@rim.com>

        Reviewed by Kent Tamura.

        Enum value FORWARD, BACKWARD, RIGHT, LEFT are causing macro conflicts.
        https://bugs.webkit.org/show_bug.cgi?id=35530

        Change enum EAlteration from { MOVE, EXTEND } to { AlterationMove, AlterationExtend } and enum EDirection { FORWARD, BACKWARD, RIGHT, LEFT} to { DirectionForward, DirectionBackward, DirectionRight, DirectionLeft } to avoid macro conflict, and also better coding style conformance.

        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::executeCommand):

2010-05-31  Roland Steiner  <rolandsteiner@chromium.org>

        Bug 39977 - Missing Chromium bindings for InspectorController methods introduced in r60443
        https://bugs.webkit.org/show_bug.cgi?id=39977
        
        add missing InspectorController JS bindings:
        - getStyleSheet
        - getRuleRangesForStyleSheetId
        
        Tests: inspector/styles-source-offsets.html

        * src/js/InspectorControllerImpl.js:
        (devtools.InspectorBackendImpl):

2010-05-31  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r60456.
        http://trac.webkit.org/changeset/60456
        https://bugs.webkit.org/show_bug.cgi?id=39974

        Broke Chromium Linux/Max build (Requested by tkent on
        #webkit).

        * DEPS:

2010-05-31  Kent Tamura  <tkent@chromium.org>

        Reviewed by Dimitri Glazkov.

        [DRT/Chromium] Checking out lighttpd
        https://bugs.webkit.org/show_bug.cgi?id=39948

        - Checking out lighttpd only on Windows. It is used by new-run-webkit-tests.
        - Update Chromium revision to use Windows resource query code

        * DEPS:

2010-05-31  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: allow hiding Scripts panel from Chromium code. This
        is needed to support v8 debugging protocol which has an implementation