@@ -91,6 +91,7 @@ public:
     virtual void setShowDebugBorders(bool) = 0;
     virtual void setEditingBehavior(EditingBehavior) = 0;
     virtual void setAcceleratedCompositingEnabled(bool) = 0;
+    virtual void setHTML5ParserEnabled(bool) = 0;
 
 protected:
     ~WebSettings() { }
