@@ -279,4 +279,9 @@ void WebSettingsImpl::setAcceleratedCompositingEnabled(bool enabled)
     m_settings->setAcceleratedCompositingEnabled(enabled);
 }
 
+void WebSettingsImpl::setHTML5ParserEnabled(bool enabled)
+{
+    m_settings->setHTML5ParserEnabled(enabled);
+}
+
 } // namespace WebKit
